--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,10 +1,23 @@
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Nunito';
     font-style: normal;
     font-weight: normal;
     font-display: swap;
-    src: url('../fonts/roboto-medium-webfont.woff2') format('woff2'), 
-         url('../fonts/roboto-medium-webfont.woff') format('woff'); 
+    src: url('../fonts/Nunito-Regular.ttf') format('ttf');
   }
 
+  @font-face {
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url('../fonts/Nunito-Light.ttf') format('ttf');
+  }
 
+  @font-face {
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url('../fonts/Nunito-Bold.ttf') format('ttf');
+  }
